# semver-pubgrub

./: Cargo.toml  README.md
examples/crates-vers/: Cargo.toml
examples/crates-vers/data/: requirements.csv  versions.csv
examples/crates-vers/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: contains.rs  fuzz_target_1.rs  intersection.rs  versions.rs
fuzz/src/: lib.rs
src/: bump_helpers.rs  lib.rs  semver_compatibility.rs  small_version.rs  version_like.rs
