# SPDX-License-Identifier: MPL-2.0

[package]
name = "semver-pubgrub"
version = "0.1.0"
edition = "2021"
description = "Compatibility between VersionReq from semver and VersionSet from pubgrub"
readme = "README.md"
repository = "https://github.com/pubgrub-rs/semver-pubgrub"
license = "MPL-2.0"
keywords = ["dependency", "pubgrub", "semver", "solver", "version"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
semver = {git = "https://github.com/linyihai/semver.git", branch = "prerelease-match"}
pubgrub = { git="https://github.com/pubgrub-rs/pubgrub", branch="dev" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "pubgrub/serde", "semver/serde"]
