[package]
name = "semver-pubgrub-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
semver = "1.0.13"
pubgrub = { git="https://github.com/pubgrub-rs/pubgrub", branch="dev" }

[dependencies.semver-pubgrub]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
