[package]
name = "semver-pubgrub-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
semver = "1.0.13"
proptest = { version="1.4.0", default-features=false, features=["std"]}
pubgrub = { git="https://github.com/pubgrub-rs/pubgrub", branch="dev" }

[dependencies.semver-pubgrub]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "contains"
path = "fuzz_targets/contains.rs"
test = false
doc = false

[[bin]]
name = "intersection"
path = "fuzz_targets/intersection.rs"
test = false
doc = false
